--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -25,12 +25,12 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "e.g.: Import the dataset with \n",
-    "`mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json`"
+    "\\`mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,33 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
+      "{'AddressLine1': 'The Pines Garden',\n",
+      " 'AddressLine2': 'Beach Road',\n",
+      " 'AddressLine3': 'St Margarets Bay',\n",
       " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessName': 'The Tea Room',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'Distance': 4587.362402580997,\n",
+      " 'FHRSID': 551803,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000070948',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'PostCode': 'CT15 6DZ',\n",
+      " 'RatingDate': '2021-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6465a2460acdf95ecb6e6486'),\n",
-      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
-      "             'longitude': Decimal128('1.195625')},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('646689d0ed2fc25cfd2a7aa9'),\n",
+      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/551803',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -146,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [],
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -248,7 +247,7 @@
       " 'AddressLine4': '',\n",
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessTypeID': '',\n",
       " 'Distance': 4623.972328074718,\n",
       " 'LocalAuthorityCode': '511',\n",
       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
@@ -259,9 +258,8 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6465a26712b4885d8f561931'),\n",
-      " 'geocode': {'latitude': Decimal128('51.49014200'),\n",
-      "             'longitude': Decimal128('0.08384000')},\n",
+      " '_id': ObjectId('646689f49a75f01fc0f0545e'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -293,7 +291,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6465a2460acdf95ecb6e6486')}\n"
+      " '_id': ObjectId('646689d0ed2fc25cfd2a7aa9')}\n"
      ]
     }
    ],
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [],
@@ -328,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -353,9 +351,8 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6465a26712b4885d8f561931'),\n",
-      " 'geocode': {'latitude': Decimal128('51.49014200'),\n",
-      "             'longitude': Decimal128('0.08384000')},\n",
+      " '_id': ObjectId('646689f49a75f01fc0f0545e'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -377,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -385,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents with Dover as the local authority: 0\n"
+      "Number of documents with Dover as the local authority: 994\n"
      ]
     }
    ],
@@ -399,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 15,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7feac80c08c0>"
+       "<pymongo.results.DeleteResult at 0x7fac70ee6b40>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 16,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -440,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 17,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -448,33 +445,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': '4',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6465a2460acdf95ecb6e6486'),\n",
-      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
-      "             'longitude': Decimal128('1.195625')},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('646689d0ed2fc25cfd2a7d8e'),\n",
+      " 'geocode': {'latitude': '51.086058', 'longitude': '1.196408'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -484,7 +480,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -511,17 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7feaf873fac0>"
+       "<pymongo.results.UpdateResult at 0x7fac70ef2800>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "id": "7ad444f2",
    "metadata": {},
    "outputs": [
@@ -543,8 +539,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latitude:  51.083812\n",
-      "longitude:  1.195625\n"
+      "latitude:  51.086058\n",
+      "longitude:  1.196408\n"
      ]
     }
    ],
@@ -565,17 +561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 20,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7feaf8713080>"
+       "<pymongo.results.UpdateResult at 0x7fac79c57f80>"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,17 +584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 21,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7feaf83fd980>"
+       "<pymongo.results.UpdateResult at 0x7fac70d87280>"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 22,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -618,33 +614,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': 4,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6465a2460acdf95ecb6e6486'),\n",
-      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
-      "             'longitude': Decimal128('1.195625')},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('646689d0ed2fc25cfd2a7d8e'),\n",
+      " 'geocode': {'latitude': Decimal128('51.086058'),\n",
+      "             'longitude': Decimal128('1.196408')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -654,7 +650,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
