final code plus README file

--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Pines Garden',\n",
-      " 'AddressLine2': 'Beach Road',\n",
-      " 'AddressLine3': 'St Margarets Bay',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Tea Room',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      "{'AddressLine1': '27 Granville Road',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Lenox House',\n",
+      " 'BusinessType': 'Hotel/bed & breakfast/guest house',\n",
+      " 'BusinessTypeID': 7842,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.362402580997,\n",
-      " 'FHRSID': 551803,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000070948',\n",
+      " 'Distance': 4587.440906956158,\n",
+      " 'FHRSID': 632212,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000043474',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DZ',\n",
-      " 'RatingDate': '2021-08-17T00:00:00',\n",
+      " 'PostCode': 'CT15 6DS',\n",
+      " 'RatingDate': '2020-03-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646689d0ed2fc25cfd2a7aa9'),\n",
-      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/551803',\n",
+      " '_id': ObjectId('646ba6c6f9a22475b188dcae'),\n",
+      " 'geocode': {'latitude': '51.152411', 'longitude': '1.385585'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/632212',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -225,10 +225,21 @@
    "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x7fcc99fdea00>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Insert the new restaurant into the collection\n",
-    "result = establishments.insert_one(new_restaurant)"
+    "establishments.insert_one(new_restaurant)"
    ]
   },
   {
@@ -258,7 +269,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646689f49a75f01fc0f0545e'),\n",
+      " '_id': ObjectId('646ba700b4b160966161a877'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -291,7 +302,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('646689d0ed2fc25cfd2a7aa9')}\n"
+      " '_id': ObjectId('646ba6c6f9a22475b188dcaf')}\n"
      ]
     }
    ],
@@ -351,7 +362,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646689f49a75f01fc0f0545e'),\n",
+      " '_id': ObjectId('646ba700b4b160966161a877'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -403,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7fac70ee6b40>"
+       "<pymongo.results.DeleteResult at 0x7fcc78224440>"
       ]
      },
      "execution_count": 15,
@@ -445,32 +456,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'Wear Bay Road',\n",
-      " 'AddressLine2': 'Folkestone',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Wear Bay Bowls Club',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
+      " 'AddressLine2': 'Warren Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+      " 'BusinessType': 'School/college/university',\n",
+      " 'BusinessTypeID': 7845,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.821311183521,\n",
-      " 'FHRSID': 647177,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+      " 'Distance': 4591.871474174837,\n",
+      " 'FHRSID': 289353,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6PY',\n",
-      " 'RatingDate': '2014-03-31T00:00:00',\n",
-      " 'RatingKey': 'fhrs_4_en-gb',\n",
-      " 'RatingValue': '4',\n",
+      " 'PostCode': 'CT19 6QH',\n",
+      " 'RatingDate': '2016-09-13T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646689d0ed2fc25cfd2a7d8e'),\n",
-      " 'geocode': {'latitude': '51.086058', 'longitude': '1.196408'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
+      " '_id': ObjectId('646ba6c6f9a22475b188df93'),\n",
+      " 'geocode': {'latitude': '51.085797', 'longitude': '1.194762'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -480,7 +491,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -514,7 +525,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7fac70ef2800>"
+       "<pymongo.results.UpdateResult at 0x7fcc99fde100>"
       ]
      },
      "execution_count": 18,
@@ -539,8 +550,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latitude:  51.086058\n",
-      "longitude:  1.196408\n"
+      "latitude:  51.085797\n",
+      "longitude:  1.194762\n"
      ]
     }
    ],
@@ -568,7 +579,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7fac79c57f80>"
+       "<pymongo.results.UpdateResult at 0x7fcc7822cb80>"
       ]
      },
      "execution_count": 20,
@@ -591,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7fac70d87280>"
+       "<pymongo.results.UpdateResult at 0x7fcc99fe4fc0>"
       ]
      },
      "execution_count": 21,
@@ -614,33 +625,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'Wear Bay Road',\n",
-      " 'AddressLine2': 'Folkestone',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Wear Bay Bowls Club',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
+      " 'AddressLine2': 'Warren Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+      " 'BusinessType': 'School/college/university',\n",
+      " 'BusinessTypeID': 7845,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.821311183521,\n",
-      " 'FHRSID': 647177,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+      " 'Distance': 4591.871474174837,\n",
+      " 'FHRSID': 289353,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6PY',\n",
-      " 'RatingDate': '2014-03-31T00:00:00',\n",
-      " 'RatingKey': 'fhrs_4_en-gb',\n",
-      " 'RatingValue': 4,\n",
+      " 'PostCode': 'CT19 6QH',\n",
+      " 'RatingDate': '2016-09-13T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646689d0ed2fc25cfd2a7d8e'),\n",
-      " 'geocode': {'latitude': Decimal128('51.086058'),\n",
-      "             'longitude': Decimal128('1.196408')},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
+      " '_id': ObjectId('646ba6c6f9a22475b188df93'),\n",
+      " 'geocode': {'latitude': Decimal128('51.085797'),\n",
+      "             'longitude': Decimal128('1.194762')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -650,7 +661,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
